[tool.poetry]
name = "repl_python3_voithos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
Quart = "^0.15.1"
Quart-Discord ="^2.1.4"
discord-ext-ipc ="^2.1.1"
Quart-Rate-Limiter ="^0.5.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
